docs/sf-export/sfdx-raw/objects/First_Payment_Collection__c/First_Payment_Collection__c.object-meta.xml
<CustomObject>
    <label>First Payment Collection</label>
    <nameField>
        <displayFormat>FPC-{000000}</displayFormat>
        <label>First Payment Collection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>First Payment Collections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>