docs/sf-export/sfdx-raw/objects/First_Payment_Collection__c/fields/Agent_Weekly_Payroll__c.field-meta.xml
<CustomField>
    <fullName>Agent_Weekly_Payroll__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent Weekly Payroll</label>
    <referenceTo>Agent_Weekly_Payroll__c</referenceTo>
    <relationshipLabel>First Payment Collections</relationshipLabel>
    <relationshipName>First_Payment_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>