docs/sf-export/sfdx-raw/objects/First_Payment_Collection__c/fields/Closer__c.field-meta.xml
<CustomField>
    <fullName>Closer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>First_Payment_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>