docs/sf-export/sfdx-raw/objects/First_Payment_Collection__c/fields/First_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Amount__c</fullName>
    <label>First Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>