docs/sf-export/sfdx-raw/objects/First_Payment_Collection__c/fields/First_Payment_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Payment_Completed_Date__c</fullName>
    <label>First Payment Completed Date</label>
    <type>DateTime</type>
</CustomField>