docs/sf-export/sfdx-raw/objects/First_Payment_Collection__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>First Payment Collections</relationshipLabel>
    <relationshipName>First_Payment_Collections</relationshipName>
    <type>Lookup</type>
</CustomField>