docs/sf-export/sfdx-raw/objects/First_Payment_Collection__c/fields/Payout_Amount__c.field-meta.xml
<CustomField>
    <fullName>Payout_Amount__c</fullName>
    <formula>Total_Debt_Amount_45_percent__c *  Commission_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payout Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>