docs/sf-export/sfdx-raw/objects/First_Payment_Collection__c/fields/Previous_Agent_Monthly_Tier__c.field-meta.xml
<CustomField>
    <fullName>Previous_Agent_Monthly_Tier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Previous Agent Monthly Tier</label>
    <referenceTo>Agent_Monthly_Tier__c</referenceTo>
    <relationshipLabel>First Payment Collections (Active Tier)</relationshipLabel>
    <relationshipName>First_Payment_Collections1</relationshipName>
    <type>Lookup</type>
</CustomField>