docs/sf-export/sfdx-raw/objects/First_Payment_Collection__c/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <formula>TEXT(Previous_Agent_Monthly_Tier__r.Tier__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier</label>
    <type>Text</type>
</CustomField>