docs/sf-export/sfdx-raw/objects/First_Payment_Collection__c/fields/Total_Debt_Amount_45_percent__c.field-meta.xml
<CustomField>
    <fullName>Total_Debt_Amount_45_percent__c</fullName>
    <formula>IF(
  ISBLANK( Total_Debt_Amount__c ),
  0,
  Total_Debt_Amount__c * 0.45
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>45% of Total Debt Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>